fix alignment column and maps

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -1,6 +1,5 @@
 @import 'variables';
 
-
 .card-header {
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 1px 10px 0 rgba(0, 0, 0, 0.19);
     background-color: $retrace-light-blue;
@@ -8,10 +7,9 @@
     width: 100%;
 }
 
-
 #streamImage {
-    width: 10%;
-    height: 10%;
+    width: 4vw;
+    height: 4vw;
 }
 
 #projectPic {
@@ -23,6 +21,12 @@
     overflow: -moz-scrollbars-vertical;
     overflow-y: scroll;
     height: 150px;
+}
+
+#titleBar {
+    padding: 1vw 1.8vw 0.2vw 1.3vw;
+    box-shadow: /*0 1px 5px 0 rgba(0, 0, 0, 0.2), */0 1px 10px 0 rgba(0, 0, 0, 0.19);
+    width: 100%;
 }
 
 #wasteStreams {
